--- a/src/components/ResetPassForm/ResetPass.module.css
+++ b/src/components/ResetPassForm/ResetPass.module.css
@@ -7,17 +7,25 @@
 }
 
 
+.wrapper .inputWrapper:first-child {
+    margin-top: 16px;
+}
+
+.wrapper .inputWrapper:last-child {
+    margin-top: 6px;
+}
+
 .inputWrapper {
     display: flex;
     flex-direction: column;
-    margin-top: 16px;
-    /* width: 200px; */
+
+    width: 200px;
 }
 
 .formTitle {
     color: #343A40;
     font-family: Poppins;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 600;
     line-height: 18px;
     text-align: center;
@@ -27,31 +35,50 @@
     color: #74788D;
     text-align: center;
     font-family: Poppins;
-    font-size: 14px;
+    font-size: 7px;
     font-weight: 400;
     line-height: 14px;
     margin-top: 12px;
-    /* width: 125px; */
 }
 
 .label {
     color: #495057;
     font-family: Poppins;
-    font-size: 14px;
+    font-size: 8px;
     font-weight: 500;
     line-height: 15px;
 }
 
 .input {
-    margin-top: 8px;
     display: flex;
-    padding: 9px 10px;
+    padding: 5px 10px;
     justify-content: center;
     align-items: center;
     gap: 10px;
+    align-self: stretch;
     border-radius: 4px;
-    border: 1px solid #EFF2F7;
-    background: #FFF;
+    border: 1px solid var(--text-color-50, #EFF2F7);
+    background: var(--neutral-10, #FFF);
+
+    color: var(--text-color-70, #74788D);
+    font-family: Poppins;
+    font-size: 7px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    width: 100%;
+}
+
+.passInptWrapper {
+    position: relative;
+    width: 100%;
+}
+
+.iconWrapper {
+    position: absolute;
+    position: absolute;
+    top: 3px;
+    right: 10px;
 }
 
 .button {
@@ -68,11 +95,12 @@
 
     color: #FFF;
     font-family: Poppins;
-    font-size: 14px;
+    font-size: 7px;
     font-weight: 400;
     line-height: 14px;
     text-transform: capitalize;
     cursor: pointer;
+    width: 100%;
 }
 
 .saveWrapper {
@@ -120,4 +148,28 @@
 .lockedImg {
     height: 100%;
     width: 100%;
+}
+
+.madedBy {
+    color: #74788D;
+    font-family: Poppins;
+    font-size: 7px;
+    font-weight: 400;
+    line-height: 14px;
+    text-align: center;
+    margin-top: 8px;
+}
+
+.heart::before {
+    content: "❤";
+    color: red;
+}
+
+.error {
+    color: red;
+    font-family: Poppins;
+    font-size: 7px;
+    font-weight: 400;
+    line-height: 14px;
+    margin-top: 8px;
 }
