--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -5,16 +5,9 @@ body {
 .wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 .rowWrapper {
     display: flex;
-}
-
-.footer {
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
 }
