--- a/src/pages/PricingPage/PricingPage.module.css
+++ b/src/pages/PricingPage/PricingPage.module.css
@@ -43,6 +43,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    position: relative;
 }
 
 .option {
@@ -74,6 +75,34 @@
     margin-left: 4px;
 }
 
+.optionWrapper {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 20px;
+    border-radius: 4px;
+
+    font-family: Poppins;
+    font-size: 7px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    width: 52px;
+    text-transform: capitalize;
+    background: var(--text-color-60, #EFF2F7);
+}
+
+.optionFilter {
+    margin-top: 4px;
+    cursor: pointer;
+    padding: 2px 8px;
+    border-radius: 4px;
+}
+
+.optionFilter:hover {
+    background: var(--text-color-60, #e5ebf4);
+}
+
 .planWrapper {
     display: flex;
     justify-content: space-between;
@@ -83,4 +112,8 @@
 
 .link {
     text-decoration: none;
+}
+
+.loaderWrapper {
+    margin: 150px auto;
 }
