create companies page + logic

--- a/src/components/TableHeader/TableHeader.module.css
+++ b/src/components/TableHeader/TableHeader.module.css
@@ -1,5 +1,6 @@
 .wrapper {
-    width: 689px;
+    /* width: 689px; */
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
