--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -7,7 +7,8 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     background: var(--text-color-white, #FFF);
-    width: 689px;
+    /* width: 689px; */
+    width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
     height: 408px;
@@ -61,9 +62,9 @@ th {
 
 .loaderWrapper {
     position: absolute;
-    left: 300px;
-    transform: translate(50%, 50%);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
-    margin-top: 80px;
 }
