--- a/src/pages/Companies/Companies.module.css
+++ b/src/pages/Companies/Companies.module.css
@@ -1,113 +1,62 @@
 .wrapper {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    margin: 20px auto;
 }
 
-.headerWrapper {
+.tableDescription {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    background: var(--text-color-white, #FFF);
+    display: flex;
+    padding: 24px 16px;
+    gap: 10px;
+    align-self: stretch;
+    border-bottom: 1px solid var(--text-color-50, #EFF2F7);
 }
 
-.pricingTitle {
-    color: var(--text-color-90, #495057);
+.tableWrapper {
+    margin: 20px auto;
+    width: 352px;
+}
+
+.title {
+    color: var(--text-color-10, #343A40);
     font-family: Poppins;
-    font-size: 11px;
+    font-size: 12px;
     font-style: normal;
-    font-weight: 500;
-    line-height: 17px;
+    font-weight: 600;
+    line-height: 13px;
 }
 
-.addUserBtn {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    background: var(--main-main, #556EE6);
-    border: none;
-
-    color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    cursor: pointer;
-}
-
-.btnWrapper {
-    display: flex;
-    align-items: center;
-}
-
-.btnCreateToken {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border: none;
-    border-radius: 4px;
-    background: var(--main-main, #556EE6);
-
-    color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    cursor: pointer;
-}
-
-.imageWrapper {
-    display: flex;
-    height: 18.286px;
-    padding: 4.571px 5.714px;
-    justify-content: center;
-    align-items: center;
-    gap: 2.286px;
-    border-radius: 2.286px;
-    background: #EFF2F7;
-    cursor: pointer;
-    margin-right: 4px;
-}
-
-.filterWrapper {
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
-}
-
-.filterBtnWrapper {
-    display: flex;
-    align-items: center;
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    border: 1px solid var(--text-color-20, #EFF2F7);
-    background: var(--text-color-70, #FFF);
-
+.desctiptionText {
     color: var(--text-color-20, #495057);
     font-family: Poppins;
     font-size: 7px;
     font-style: normal;
     font-weight: 400;
     line-height: 14px;
-    text-transform: capitalize;
-    margin-right: 4px;
-    cursor: pointer;
 }
 
-
+.addCompanie {
+    display: flex;
+    padding: 2px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    border-radius: 4px;
+    background: var(--main-main, #556EE6);
+    color: var(--text-color-white, #FFF);
+    font-family: Poppins;
+    font-size: 7px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px;
+    text-transform: capitalize;
+    border: none;
+    margin-left: 10px;
+    cursor: pointer;
+}
 
 .searchInputWrapper {
     padding: 8px 10px;
@@ -168,11 +117,6 @@
     cursor: pointer;
 }
 
-.tableWrapper {
-    margin: 20px auto;
-    width: 689px;
-}
-
 .clearIcon {
     position: absolute;
     height: 8px;
@@ -180,6 +124,25 @@
     right: 80px;
 }
 
+.btnWrapper {
+    display: flex;
+    align-items: center;
+}
+
+.imageWrapper {
+    display: flex;
+    height: 18.286px;
+    padding: 4.571px 5.714px;
+    justify-content: center;
+    align-items: center;
+    gap: 2.286px;
+    border-radius: 2.286px;
+    background: #EFF2F7;
+    cursor: pointer;
+    margin-right: 4px;
+}
+
+/************* PAGINATION *************/
 
 .pagination {
     display: flex;
