--- a/src/pages/UsersPage/AddUserModal/AddUserModal.module.css
+++ b/src/pages/UsersPage/AddUserModal/AddUserModal.module.css
@@ -268,3 +268,12 @@
     top: 17px;
     right: 10px;
 }
+
+.error {
+    color: red;
+    font-family: Poppins;
+    font-size: 7px;
+    font-weight: 400;
+    line-height: 14px;
+    margin-top: 8px;
+}
