--- a/src/pages/TicketChatPage/ChatPage.module.css
+++ b/src/pages/TicketChatPage/ChatPage.module.css
@@ -27,17 +27,7 @@
     justify-content: space-between;
 }
 
-.messageText {
-    color: var(--text-90, #495057);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    width: 300px;
-    margin-right: 39px;
-}
+
 
 .leftWrapper {
     display: flex;
@@ -68,44 +58,6 @@
     border-bottom: 1px solid #EFF2F7;
 }
 
-.messageWrapper {
-    display: flex;
-    padding: 8px 0px;
-    margin-top: 12px;
-    border-bottom: 1px solid #EFF2F7;
-}
-
-.userAvatar {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-}
-
-.date {
-    color: var(--text-70, #74788D);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-}
-
-.messageData {
-    display: flex;
-    flex-direction: column;
-    margin-left: 18px;
-}
-
-.userName {
-    color: var(--text-90, #495057);
-    font-family: Poppins;
-    font-size: 9px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 15px;
-}
-
 .textAreaWrapper {
     display: flex;
     flex-direction: column;
@@ -113,6 +65,15 @@
     left: 47px;
     bottom: 0;
     position: absolute;
+}
+
+.inputTitle {
+    color: var(--text-90, #495057);
+    font-family: Poppins;
+    font-size: 9px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 15px;
 }
 
 .textArea {
@@ -154,63 +115,6 @@
     border: none;
 
     color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-}
-
-.rightWrapper {
-    width: 250px;
-    margin-left: 36px;
-    display: flex;
-    padding: 16px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 12px;
-    background: #F8F8FB;
-    display: flex;
-    align-items: flex-start;
-    gap: 5px;
-    border-radius: 4px;
-    background: var(--text-color-20, #EFF2F7);
-    height: 118px;
-}
-
-.statusChips {
-    color: var(--text-color-50, #555B6D);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12px;
-    background: var(--text-color-20, #EFF2F7);
-}
-
-.status {
-    color: var(--text-90, #495057);
-    font-family: Poppins;
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 15px;
-    text-transform: capitalize;
-}
-
-.reason {
-    color: var(--text-90, #495057);
-    font-family: Poppins;
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 15px;
-    text-transform: capitalize;
-}
-
-.reasonDescription {
-    color: var(--text-90, #495057);
     font-family: Poppins;
     font-size: 7px;
     font-style: normal;
