fix sorting + styles

--- a/src/components/Header/ProfilePopUp/ProfilePopUp.module.css
+++ b/src/components/Header/ProfilePopUp/ProfilePopUp.module.css
@@ -35,6 +35,7 @@
     text-transform: capitalize;
     text-align: center;
     padding: 10px 14px 10px 14px;
+    text-decoration: none;
 }
 
 .optionStyles:hover {
