--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -11,7 +11,7 @@
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
-    height: 408px;
+    min-height: 408px;
     position: relative;
 }
 
