--- a/src/components/Header/NotificationPopUp/NotificationPopUp.module.css
+++ b/src/components/Header/NotificationPopUp/NotificationPopUp.module.css
@@ -26,6 +26,8 @@
     left: -122px;
     right: -100px;
     border-radius: 10px;
+    overflow: auto;
+    max-height: 300px;
 }
 
 .notTitle {
@@ -57,17 +59,23 @@
     display: flex;
     flex-direction: column;
     margin-left: 12px;
+    padding-bottom: 8px;
+    width: 100%;
+    border-bottom: 1px solid var(--info-color-badge, #EFF2F7);
 }
 
 
 .textDescription {
-    color: #495057;
     font-family: Poppins;
     font-size: 8px;
     font-style: normal;
     font-weight: 400;
     line-height: 15px;
     text-transform: capitalize;
+}
+
+.notificationTextNotReaded{
+    color: #495057;
 }
 
 .time {
@@ -78,6 +86,7 @@
     line-height: 14px;
     text-transform: capitalize;
     margin-top: 8px;
+    padding-right: 10px;
 }
 
 .inputCheckBox {
@@ -87,4 +96,13 @@
 .inputCheckBox:checked::before {
     border: 2px solid #fff;
     opacity: 1;
+}
+
+.specialNotification{
+    color: #A6B0CF;
+}
+
+.dateLoaderWrapper{
+    display: flex;
+    align-items: center;
 }
