--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,89 +1,141 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 30px;
-    background-color: #ffff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 30px;
+  background-color: #ffff;
 }
 
 .title {
-    font-family: Poppins;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 18px;
-    color: #343A40;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18px;
+  color: #343a40;
 }
 
 .dataWrapper {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .moonWrapper {
-    width: 10px;
-    margin-right: 21px;
-    cursor: pointer;
+  width: 10px;
+  margin-right: 21px;
+  cursor: pointer;
 }
 
 .moonImage {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 .flagWrapper {
-    display: flex;
-    align-items: center;
-    height: 12px;
-    margin-right: 21px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 12px;
+  margin-right: 21px;
+  cursor: pointer;
+  position: relative;
 }
 
 .flagImage {
-    width: auto;
-    height: 100%;
+  width: auto;
+  height: 100%;
 }
 
 .arrowWrapper {
-    width: 8px;
+  width: 8px;
 }
 
 .arrowImage {
-    width: 8px;
+  width: 8px;
 }
 
+.languageWrapper {
+  display: none;
+  width: 198px;
+  opacity: 0;
+  left: -122px;
+  right: -100px;
+  position: absolute;
+  visibility: hidden;
+  transition: all 0.5s ease;
+  transform: translateX(100%);
+  overflow: hidden;
+  padding: 14px 15px 14px 15px;
+  box-shadow: 1px 4px 15px 4px rgba(0, 0, 0, 0.1);
+}
+
+.languageWrapperOpened {
+  display: flex;
+  flex-direction: column;
+  background-color: #ffff;
+  z-index: 1;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.5s ease;
+  transform: translateX(0);
+  top: 34px;
+  left: -166px;
+  right: -100px;
+  border-radius: 10px;
+  overflow: auto;
+  max-height: 300px;
+}
+
+.languageStyle {
+  width: 100%;
+  align-items: center;
+  padding: 10px 20px;
+  font-size: 8px;
+  line-height: 21px;
+  color: #1e2125;
+  font-weight: 400;
+  font-family: Poppins;
+}
+
+.languageStyle:hover {
+  background-color: #f6f7f8;
+}
+
+.languageStyleActive {
+    background-color: #f6f7f8;
+  }
+
 .bellWrapper {
-    width: 10px;
-    position: relative;
-    margin-right: 21px;
-    cursor: pointer;
+  width: 10px;
+  position: relative;
+  margin-right: 21px;
+  cursor: pointer;
 }
 
 .bellImage {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .notification {
-    width: 3px;
-    height: 3px;
-    background: #F46A6A;
-    border-radius: 50%;
-    position: absolute;
-    top: 6px;
-    right: 2px;
+  width: 3px;
+  height: 3px;
+  background: #f46a6a;
+  border-radius: 50%;
+  position: absolute;
+  top: 6px;
+  right: 2px;
 }
 
 .userData {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .userName {
-    font-family: Poppins;
-    font-size: 8px;
-    font-weight: 400;
-    line-height: 15px;
-    text-transform: capitalize;
-    color: #555B6D;
+  font-family: Poppins;
+  font-size: 8px;
+  font-weight: 400;
+  line-height: 15px;
+  text-transform: capitalize;
+  color: #555b6d;
 }
