--- a/src/pages/TiketPage/TicketPage.module.css
+++ b/src/pages/TiketPage/TicketPage.module.css
@@ -21,7 +21,7 @@
     font-weight: 400;
     line-height: 14px;
     text-transform: capitalize;
-    width: 47px;
+    /* width: 47px; */
     cursor: pointer;
 }
 
