add logout button

--- a/src/components/Header/ProfilePopUp/ProfilePopUp.module.css
+++ b/src/components/Header/ProfilePopUp/ProfilePopUp.module.css
@@ -36,6 +36,7 @@
     text-align: center;
     padding: 10px 14px 10px 14px;
     text-decoration: none;
+    border: none;
 }
 
 .optionStyles:hover {
