--- a/src/pages/UsersPage/UsersPage.module.css
+++ b/src/pages/UsersPage/UsersPage.module.css
@@ -1,231 +1,262 @@
 .wrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .headerWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .pricingTitle {
-    color: var(--text-color-90, #495057);
-    font-family: Poppins;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 17px;
+  color: var(--text-color-90, #495057);
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 17px;
 }
 
 .addUserBtn {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    background: var(--main-main, #556EE6);
-    border: none;
+  display: flex;
+  padding: 2px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 4px;
+  background: var(--main-main, #556ee6);
+  border: none;
 
-    color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    cursor: pointer;
+  color: var(--text-color-white, #fff);
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .btnWrapper {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .btnCreateToken {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border: none;
-    border-radius: 4px;
-    background: var(--main-main, #556EE6);
+  display: flex;
+  padding: 2px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border: none;
+  border-radius: 4px;
+  background: var(--main-main, #556ee6);
 
-    color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    cursor: pointer;
+  color: var(--text-color-white, #fff);
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .imageWrapper {
-    display: flex;
-    height: 18.286px;
-    padding: 4.571px 5.714px;
-    justify-content: center;
-    align-items: center;
-    gap: 2.286px;
-    border-radius: 2.286px;
-    background: #EFF2F7;
-    cursor: pointer;
-    margin-right: 4px;
+  display: flex;
+  height: 18.286px;
+  padding: 4.571px 5.714px;
+  justify-content: center;
+  align-items: center;
+  gap: 2.286px;
+  border-radius: 2.286px;
+  background: #eff2f7;
+  cursor: pointer;
+  margin-right: 4px;
 }
 
 .filterWrapper {
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+  position: relative;
+}
+
+.optionWrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 30px;
+  left: 9px;
+  border-radius: 4px;
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  padding-right: 4px;
+  line-height: 14px;
+  width: 57px;
+  text-transform: capitalize;
+  z-index: 3;
+  background: var(--text-color-60, #eff2f7);
+}
+
+.optionFilter {
+  margin-top: 4px;
+  cursor: pointer;
+  padding: 2px 8px;
+  border-radius: 4px;
+}
+
+.optionFilter:hover {
+  background: var(--text-color-60, #e5ebf4);
 }
 
 .filterBtnWrapper {
-    display: flex;
-    align-items: center;
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    border: 1px solid var(--text-color-20, #EFF2F7);
-    background: var(--text-color-70, #FFF);
+  display: flex;
+  align-items: center;
+  display: flex;
+  padding: 2px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 4px;
+  border: 1px solid var(--text-color-20, #eff2f7);
+  background: var(--text-color-70, #fff);
 
-    color: var(--text-color-20, #495057);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    margin-right: 4px;
-    cursor: pointer;
+  color: var(--text-color-20, #495057);
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
+  margin-right: 4px;
+  cursor: pointer;
 }
 
 .tableWrapper {
-    margin: 20px auto;
-    width: 689px;
+  margin: 20px auto;
+  width: 689px;
 }
 
-
 .searchInputWrapper {
-    padding: 8px 10px;
-    display: flex;
-    flex: 1 0 0;
-    background: var(--text-color-white, #FFF);
-    align-items: center;
-    position: relative;
-    border-left: 1px solid var(--text-color-50, #EFF2F7);
+  padding: 8px 10px;
+  display: flex;
+  flex: 1 0 0;
+  background: var(--text-color-white, #fff);
+  align-items: center;
+  position: relative;
+  border-left: 1px solid var(--text-color-50, #eff2f7);
 }
 
 .inputSearch {
-    display: flex;
-    height: 30px;
-    padding: 11px 16px;
-    align-items: center;
-    gap: 7px;
-    flex: 1 0 0;
-    background: var(--text-color-white, #FFF);
-    border: none;
-    color: var(--text-color-80, #555B6D);
-    font-family: Poppins;
-    font-size: 8px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 15px;
-    text-transform: capitalize;
+  display: flex;
+  height: 30px;
+  padding: 11px 16px;
+  align-items: center;
+  gap: 7px;
+  flex: 1 0 0;
+  background: var(--text-color-white, #fff);
+  border: none;
+  color: var(--text-color-80, #555b6d);
+  font-family: Poppins;
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 15px;
+  text-transform: capitalize;
 }
 
 .inputSearch:focus,
 .inputSearch:focus {
-    outline: none;
+  outline: none;
 }
 
 .searchIcon {
-    position: absolute;
-    left: 11px;
-    top: 18px;
+  position: absolute;
+  left: 11px;
+  top: 18px;
 }
 
 .btnSearch {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    background: var(--main-main, #556EE6);
-    border: none;
+  display: flex;
+  padding: 2px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 4px;
+  background: var(--main-main, #556ee6);
+  border: none;
 
-    color: var(--text-color-white, #FFF);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    cursor: pointer;
+  color: var(--text-color-white, #fff);
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
+  cursor: pointer;
 }
-
 
 .clearIcon {
-    position: absolute;
-    height: 8px;
-    width: 8px;
-    right: 80px;
+  position: absolute;
+  height: 8px;
+  width: 8px;
+  right: 80px;
 }
 
-
 .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
 }
 
 .pagination__prev {
-    display: flex;
-    padding: 2px 8px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-    border-radius: 4px;
-    background: var(--text-color-60, #EFF2F7);
-    color: var(--text-color-20, #495057);
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
-    border: none;
-    cursor: pointer;
+  display: flex;
+  padding: 2px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 4px;
+  background: var(--text-color-60, #eff2f7);
+  color: var(--text-color-20, #495057);
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
+  border: none;
+  cursor: pointer;
 }
 
 .pagination a {
-    display: block;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-radius: 4px;
-    cursor: pointer;
+  display: block;
+  padding: 8px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  cursor: pointer;
 
-    font-family: Poppins;
-    font-size: 7px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 14px;
-    text-transform: capitalize;
+  font-family: Poppins;
+  font-size: 7px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  text-transform: capitalize;
 }
 
 .activePage {
-    border-radius: 4px;
-    background-color: #556EE6;
-    color: #fff;
-    font-weight: bold;
+  border-radius: 4px;
+  background-color: #556ee6;
+  color: #fff;
+  font-weight: bold;
 }
